[package]
name = "address-generation"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-sdk = "2.2.1"
rand = "0.9.0"
rand_core = "0.9.3"   # Explicitly specify the rand_core version
sha2 = "0.10"
getrandom = "0.3.1"
bs58 = "0.5"
rayon = "1.10.0"
mongodb = "3.2.1"
tokio = { version = "1", features = ["full"] }
aes = "0.8"
cipher = { version = "0.4", features = ["block-padding"] }
hex = "0.4"
cbc = "0.1"
dotenv = "0.15"